trying fix the overflow hidden stuff

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -19,7 +19,7 @@ body {
     background-position: center center;
     background-color: $paleBlue;
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
     
     
 
@@ -48,7 +48,7 @@ main {
     font-weight: 500;
     align-self: center;
     
-    overflow: hidden;
+    
     padding: 0;
 
     box-shadow: 0 10px 30px hsl(0,0,65%);
@@ -64,7 +64,10 @@ main {
         background-size: cover;
         background-repeat: no-repeat;
         background-color: $brightBlue;
+        border-top-left-radius: 1.25rem;
+        border-top-right-radius: 1.25rem;
         overflow: hidden;
+        
         min-height: 10rem;
         margin-left:0;
         margin-right: 0;
